# swagger/swagger.json
@@ -8243,6 +8243,12 @@
                 "name": {
                     "type": "string"
                 },
+                "references": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/voiceprofile.ReferenceMetadata"
+                    }
+                },
                 "transcript": {
                     "type": "string"
                 },
@@ -8250,6 +8256,17 @@
                     "type": "string"
                 },
                 "voice": {
+                    "type": "string"
+                }
+            }
+        },
+        "voiceprofile.ReferenceMetadata": {
+            "type": "object",
+            "properties": {
+                "audio": {
+                    "$ref": "#/definitions/voiceprofile.AudioMetadata"
+                },
+                "transcript": {
                     "type": "string"
                 }
             }
